change the theme to lumen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/lumen.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -375,7 +375,7 @@ href="https://www.google.com/">google</a> all the time, i love it</p>
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>sample = rnorm(1000)
 mean(sample)</code></pre>
-<pre><code>## [1] 0.02886563</code></pre>
+<pre><code>## [1] -0.006848946</code></pre>
 <p>here is a direct link to the “about” page: <a
 href="about.html">about</a>.</p>
 <p>i also made a bonus <a href="extra_page.html">extra page</a></p>
