--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/lumen.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -331,7 +331,10 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About Me</a>
+</li>
+<li>
+  <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
   <a href="mailto:fm2751@cumc.columbia.edu">
@@ -342,6 +345,12 @@ div.tocify {
 <li>
   <a href="http://github.com/FionaMa01/">
     <span class="fa fa-github fa-lg"></span>
+     
+  </a>
+</li>
+<li>
+  <a href="https://www.linkedin.com/in/fiona-ma-945842255/">
+    <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
 </li>
