Put my resume on the About Me page & some modification about the styling

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ div.tocify {
   <a href="about.html">About Me</a>
 </li>
 <li>
-  <a href="dashboard.html">Dashboard</a>
+  <a href="plotly.html">HW4</a>
 </li>
 <li>
   <a href="mailto:fm2751@cumc.columbia.edu">
@@ -349,7 +349,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/fiona-ma-945842255/">
+  <a href="https://www.linkedin.com/in/fengyi-fiona-ma-945842255/">
     <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
@@ -376,26 +376,27 @@ div.tocify {
 <li><strong>Ocupation:</strong> Currently an MPH student at Columbia
 University Mailman School of Public Health, majoring in
 Epidemiology.</li>
-<li><strong>Hobbies:</strong> I love research &amp; playing with
+<li><strong>Hobbies:</strong> I love doing research &amp; playing with
 data</li>
 </ul>
 <p>Here is a meme I find interesting.</p>
 <center>
-<img src="memes/me_writing.jpg" style="width:25%; border=10px solid">
+<img src="memes/me_writing.jpg" style="width:50%; border=10px solid">
 <center>
 </div>
-<div id="to-know-more-about-fiona" class="section level1">
-<h1>To know more about Fiona</h1>
+<div id="know-more-about-fiona" class="section level1">
+<h1>Know More about Fiona</h1>
 <p>You can view my academic and professional experience on the <a
-href="about.html">About Me</a> page, same as clicking on the “About Me”
-button in the top right.</p>
+href="about.html">About Me</a> page, or clicking on the “About Me”
+button in the right of navigation bar.</p>
 </div>
 <div id="for-p8105-homework-4" class="section level1">
 <h1>For P8105 Homework 4</h1>
 <p>Homework details could be found <a
 href="https://p8105.com/homework_4.html">here</a></p>
 <p>I made some <a href="plotly.html">informative plots</a> using the NYC
-Restaurant Inspections dataset</p>
+Restaurant Inspections dataset, or you can view it by clicking on the
+“HW4” button in the right of navigation bar.</p>
 </div>
 
 
