--- a/plotly.html
+++ b/plotly.html
@@ -260,7 +260,7 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
-  <a href="dashboard.html">Dashboard</a>
+  <a href="plotly.html">HW4</a>
 </li>
 <li>
   <a href="mailto:fm2751@cumc.columbia.edu">
@@ -275,7 +275,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/fiona-ma-945842255/">
+  <a href="https://www.linkedin.com/in/fengyi-fiona-ma-945842255/">
     <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
