--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My awesome website</title>
+<title>Fiona’s experience and background</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -334,7 +334,7 @@ div.tocify {
   <a href="about.html">About Me</a>
 </li>
 <li>
-  <a href="dashboard.html">Dashboard</a>
+  <a href="plotly.html">HW4</a>
 </li>
 <li>
   <a href="mailto:fm2751@cumc.columbia.edu">
@@ -349,7 +349,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="https://www.linkedin.com/in/fiona-ma-945842255/">
+  <a href="https://www.linkedin.com/in/fengyi-fiona-ma-945842255/">
     <span class="fa fa-linkedin fa-lg"></span>
      
   </a>
@@ -363,14 +363,58 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">My awesome website</h1>
+<h1 class="title toc-ignore">Fiona’s experience and background</h1>
 
 </div>
 
 
-<div id="this-is-fionas-awesome-website" class="section level1">
-<h1>This is Fiona’s awesome website</h1>
-<p>this is the about page</p>
+<p>Please scroll down to view my full resume~</p>
+<p><img src="memes/me_shy.jpg" style="width:25%; border=10px solid"></p>
+<div id="education" class="section level1">
+<h1>EDUCATION</h1>
+<p>09/2021-NOW <strong>COLUMBIA UNIVERSITY, USA</strong></p>
+<p><em>Master of Public Health in Epidemiology, Certificate in Applied
+Biostatistics, expected in May 2023</em></p>
+<p>10/2018-07/2021 <strong>IMPERIAL COLLEGE LONDON, UK</strong></p>
+<p><em>Bachelor of Biochemistry, specialized in Bioinformatics,
+graduated on Jul. 2021</em></p>
+</div>
+<div id="research-experience" class="section level1">
+<h1>RESEARCH EXPERIENCE</h1>
+<p>03/2022-NOW <strong>Joe Lee’s Genetic Epidemiology Lab, Columbia
+University Irving Medical Center</strong></p>
+<p><em>Student Researcher</em></p>
+<p>06/2021-08/2021 <strong>Zhejiang Food and Drug Inspection
+Institute</strong></p>
+<p><em>Laboratory Analyst</em></p>
+<p>08/2020-10/2020 <strong>Zhejiang Provincial CDC</strong></p>
+<p><em>Research Assistant</em></p>
+<p>06/2020-08/2020 <strong>Betta Pharmaceuticals Co., Ltd.</strong></p>
+<p><em>Research Assistant</em></p>
+<p>04/2020-07/2020 <strong>Wang Lab, Molecular Engineering Laboratory,
+UCSD</strong></p>
+<p><em>Research Assistant</em></p>
+</div>
+<div id="skills" class="section level1">
+<h1>SKILLS</h1>
+<p><strong>Data Analysis:</strong></p>
+<p>SAS, R, MATLAB, PLINK</p>
+<p><strong>Wet Lab:</strong></p>
+<p>ELISA, Real-Time Polymerase Chain Reaction (qPCR), Cell Culture,
+High-Performance Liquid Chromatography (HPLC), Liquid
+Chromatography-Mass Spectrometry (LC-MS)</p>
+</div>
+<div id="languages" class="section level1">
+<h1>LANGUAGES</h1>
+<p><strong>Chinese</strong></p>
+<p><strong>English</strong></p>
+<hr />
+<p><img src="memes/me_happy.jpg" style="width:25%; border=10px solid"></p>
+<p>Thanks for watching~</p>
+<p><strong>Quick navigation:</strong></p>
+<p>Return to Fiona’s <a href="index.html">homepage</a></p>
+<p>Go to Fiona’s awesome <a href="plotly.html">plotly page</a> for
+HW4</p>
 </div>
 
 
