minor modifications on the content position

--- a/about.html
+++ b/about.html
@@ -409,7 +409,9 @@ Chromatography-Mass Spectrometry (LC-MS)</p>
 <p><strong>Chinese</strong></p>
 <p><strong>English</strong></p>
 <hr />
-<p><img src="memes/me_happy.jpg" style="width:25%; border=10px solid"></p>
+<center>
+<img src="memes/me_happy.jpg" style="width:25%; border=10px solid">
+<center>
 <p>Thanks for watching~</p>
 <p><strong>Quick navigation:</strong></p>
 <p>Return to Fiona’s <a href="index.html">homepage</a></p>
