--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ Epidemiology.</li>
 <li><strong>Hobbies:</strong> I love doing research &amp; playing with
 data</li>
 </ul>
-<p>Here is a meme I find interesting.</p>
+<p>Here is a meme I find interesting~</p>
 <center>
 <img src="memes/me_writing.jpg" style="width:50%; border=10px solid">
 <center>
