adding one more meme & quick nevigations on the homepage

--- a/index.html
+++ b/index.html
@@ -397,6 +397,19 @@ href="https://p8105.com/homework_4.html">here</a></p>
 <p>I made some <a href="plotly.html">informative plots</a> using the NYC
 Restaurant Inspections dataset, or you can view it by clicking on the
 “HW4” button in the right of navigation bar.</p>
+<hr />
+<center>
+<img src="memes/me_links.jpg" style="width:25%; border=10px solid">
+<center>
+<p>Thanks for watching~</p>
+<p><strong>Quick navigation:</strong></p>
+<p>Find me on <a href="http://github.com/FionaMa01/">Fiona’s
+GitHub</a></p>
+<p>Contact me via <a href="mailto:fm2751@cumc.columbia.edu">Fiona’s
+Email</a></p>
+<p>Connect with me on <a
+href="https://www.linkedin.com/in/fengyi-fiona-ma-945842255/">Fiona’s
+LinkedIn</a></p>
 </div>
 
 
