--- a/about.html
+++ b/about.html
@@ -334,7 +334,10 @@ div.tocify {
   <a href="about.html">About Me</a>
 </li>
 <li>
-  <a href="plotly.html">HW4</a>
+  <a href="dashboard.html">HW4</a>
+</li>
+<li>
+  <a href="plotly.html">plots</a>
 </li>
 <li>
   <a href="mailto:fm2751@cumc.columbia.edu">
