commit for some modifications

--- a/index.html
+++ b/index.html
@@ -397,9 +397,10 @@ button in the right of navigation bar.</p>
 <h1>For P8105 Homework 4</h1>
 <p>Homework details could be found <a
 href="https://p8105.com/homework_4.html">here</a></p>
-<p>I made some <a href="plotly.html">informative plots</a> using the NYC
-Restaurant Inspections dataset, or you can view it by clicking on the
-“HW4” button in the right of navigation bar.</p>
+<p>I made some <a href="plotly.html">informative plots</a> and a <a
+href="dashboard.html">flexdashboard</a> using the <a
+href="https://p8105.com/dataset_restaurant_inspections.html">NYC
+Restaurant Inspections dataset</a>.</p>
 <hr />
 <center>
 <img src="memes/me_links.jpg" style="width:25%; border=10px solid">
